# apps/server/internal/router/router.go
@@ -16,4 +16,5 @@ func SetupRoutes(app *fiber.App) {
 	// 주식 관련 경로
 	stocks := api.Group("/stocks")
 	stocks.Get("/:symbol/history", controller.GetStockHistory)
+	stocks.Get("/list", controller.GetStockList)
 }
